# firebase-example

./: Cargo.toml  Pipfile  README.md  firebase.json
src/: main.rs
src/python/: pyrebase.py
